# hltas-manager

./: Cargo.toml  flake.nix  idea.txt
hltas_manager/: Cargo.toml
hltas_manager/src/commands/: install.rs  project.rs
hltas_manager/src/files/files/cfgs/: hltas_min.cfg  ingame_min.cfg  record_min.cfg
resource/bat/: disable_sim_client.bat  enable_sim_client.bat  run_manager.bat  run_manager_base_root.bat
resource/cfgs/: editor.cfg  hltas.cfg  hltas_min.cfg  ingame.cfg  record.cfg
resource/git_hooks/: post-checkout
resource/git_ignores/: project
resource/ps1/: run_manager.ps1  run_manager_base.ps1  run_manager_base_root.ps1
resource/rhai/: optim.rhai
run_game/: Cargo.toml
run_game/src/: cli.rs  lib.rs  main.rs  run.rs
src/: cfg.rs  cli.rs  files.rs  helper.rs  lib.rs  main.rs  project_toml.rs
src/commands/: games.rs  install.rs  link.rs  link_hltas.rs  mod.rs  new.rs  project.rs  run_game.rs  sync.rs  sync_saves.rs
src/files/: mod.rs
src/files/files/bat/: disable_sim_client.bat  disable_vanilla_game.bat  enable_sim_client.bat  enable_vanilla_game.bat  link_hltas_files.bat  run_manager_base.bat
src/files/files/cfgs/: cam.cfg  cam_min.cfg  editor_min.cfg  hltas.cfg  ingame.cfg  ingame_min.cfg  record_min.cfg
