[package]
name = "hltas_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
anyhow = "1.0.58"
toml = "0.5.9"
serde = { version = "1.0.140", features = ["derive"] }
fs_extra = "1.2.0"
sha2 = "0.10.2"
env_logger = "0.9.0"
log = "0.4.17"
sysinfo = "0.24.7"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32"] }
