[package]
name = "hltas_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"
toml = "0.8.19"
serde = { version = "1.0.213", features = ["derive"] }
fs_extra = "1.3.0"
sha2 = "0.10.8"
env_logger = "0.11.5"
log = "0.4.22"
sysinfo = "0.32.0"
lazy_static = "1.5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32"] }
