[package]
name = "run_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
hltas_manager = { path = "../hltas_manager" }
clap = { version = "3.1.12", features = ["derive"] }
toml = "0.5.9"
env_logger = "0.9.0"
log = "0.4.16"
